# turron

./: .gitignore  Cargo.toml  README.md  build.rs  ruget-manifest.rc  turron-manifest.rc  turron.kdl
commands/ruget-cmd-ping/: Cargo.toml
commands/ruget-cmd-ping/src/: lib.rs
commands/ruget-cmd-publish/: Cargo.toml
commands/ruget-cmd-publish/src/: lib.rs
commands/ruget-cmd-relist/: Cargo.toml
commands/ruget-cmd-relist/src/: lib.rs
commands/ruget-cmd-search/: Cargo.toml
commands/ruget-cmd-search/src/: lib.rs
commands/ruget-cmd-unlist/: Cargo.toml
commands/ruget-cmd-unlist/src/: lib.rs
commands/ruget-cmd-view/: Cargo.toml
commands/ruget-cmd-view/src/: error.rs  lib.rs
commands/ruget-cmd-view/src/subcommands/: icon.rs  mod.rs  readme.rs  summary.rs  versions.rs
commands/turron-cmd-login/: Cargo.toml
commands/turron-cmd-login/src/: lib.rs
commands/turron-cmd-pack/: Cargo.toml
commands/turron-cmd-pack/src/: lib.rs
commands/turron-cmd-ping/: Cargo.toml
commands/turron-cmd-ping/src/: lib.rs
commands/turron-cmd-publish/: Cargo.toml
commands/turron-cmd-publish/src/: lib.rs
commands/turron-cmd-relist/: Cargo.toml
commands/turron-cmd-relist/src/: lib.rs
commands/turron-cmd-search/: Cargo.toml
commands/turron-cmd-search/src/: lib.rs
commands/turron-cmd-unlist/: Cargo.toml
commands/turron-cmd-unlist/src/: lib.rs
commands/turron-cmd-view/: Cargo.toml
commands/turron-cmd-view/src/: error.rs  lib.rs
commands/turron-cmd-view/src/subcommands/: icon.rs  readme.rs  summary.rs  versions.rs
crates/dotnet-semver/: Cargo.toml
crates/dotnet-semver/src/: lib.rs  range.rs
crates/miette-utils/: Cargo.toml
crates/miette-utils/src/: lib.rs
crates/nuget-api/: Cargo.toml
crates/nuget-api/src/: errors.rs  lib.rs  v3.rs
crates/nuget-api/src/v3/: content.rs  metadata.rs  mod.rs  push.rs  registration.rs  relist.rs  search.rs  unlist.rs
crates/ruget-command/: Cargo.toml
crates/ruget-command/src/: lib.rs
crates/ruget-common/: Cargo.toml
crates/ruget-common/src/: lib.rs
crates/ruget-config/: Cargo.toml
crates/ruget-config-derive/: Cargo.toml
crates/ruget-config-derive/src/: lib.rs
crates/ruget-config/src/: lib.rs
crates/ruget-diagnostics/: Cargo.toml
crates/ruget-diagnostics-derive/: Cargo.toml
crates/ruget-diagnostics-derive/src/: lib.rs
crates/ruget-diagnostics/src/: lib.rs
crates/ruget-diagnostics/tests/: derive_enum.rs  derive_struct.rs
crates/ruget-package-spec/: Cargo.toml
crates/ruget-package-spec/src/: error.rs  gitinfo.rs  lib.rs
crates/ruget-package-spec/src/parsers/: git.rs  nuget.rs  package.rs
crates/ruget-package-spec/tests/: dir.rs  git.rs  nuget.rs
crates/ruget-pick-version/: Cargo.toml
crates/ruget-pick-version/src/: lib.rs
crates/ruget-semver/: Cargo.toml
crates/ruget-semver/src/: lib.rs  range.rs  version_req.rs
crates/thisdiagnostic/: Cargo.toml
crates/thisdiagnostic-derive/: Cargo.toml
crates/thisdiagnostic/src/: lib.rs
crates/thisdiagnostic/tests/: derive_enum.rs  derive_struct.rs
crates/turron-command/: Cargo.toml
crates/turron-command/src/: lib.rs
crates/turron-common/: Cargo.toml
crates/turron-common/src/: lib.rs
crates/turron-config/: Cargo.toml
crates/turron-config-derive/: Cargo.toml
crates/turron-config-derive/src/: config_layer.rs  lib.rs
crates/turron-config/src/: lib.rs
crates/turron-dotnet/: Cargo.toml
crates/turron-dotnet/src/: errors.rs  lib.rs
crates/turron-package-spec/: Cargo.toml
crates/turron-package-spec/src/: error.rs  gitinfo.rs  lib.rs
crates/turron-package-spec/src/parsers/: git.rs  mod.rs  nuget.rs
crates/turron-package-spec/tests/: dir.rs  git.rs  nuget.rs
crates/turron-pick-version/: Cargo.toml
crates/turron-pick-version/src/: lib.rs
crates/turron-semver/: Cargo.toml
crates/turron-semver/src/: lib.rs
dotnet-tool/: Program.cs  ruget.csproj  turron.csproj
src/: lib.rs  main.rs
