[package]
name = "ruget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "crates/*",
    "commands/*"
]

[dependencies]
# Commands
ruget-cmd-ping = { path = "./commands/ruget-cmd-ping" }
ruget-cmd-publish = { path = "./commands/ruget-cmd-publish" }
ruget-cmd-relist = { path = "./commands/ruget-cmd-relist" }
ruget-cmd-search = { path = "./commands/ruget-cmd-search" }
ruget-cmd-unlist = { path = "./commands/ruget-cmd-unlist" }
ruget-cmd-view = { path = "./commands/ruget-cmd-view" }

# Workspace Deps
miette-utils = { path = "./crates/miette-utils" }
ruget-command = { path = "./crates/ruget-command" }
ruget-config = { path = "./crates/ruget-config" }

# Regular deps
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
async-trait = "0.1.36"
clap = { git = "https://github.com/zkat/clap" }
fern = "0.6.0"
log = "0.4.11"
smol = "0.1.18"
directories = "3.0.1"
miette = "0.2.1"

[build-dependencies]
embed-resource = "1.3.3"
