[package]
name = "turron"
version = "0.0.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Rusty NuGet Client and Toolkit"
categories = ["rust-patterns"]
repository = "https://github.com/zkat/turron"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
exclude = ["images/", "tests/", "dotnet-tool/", "crates/", "commands/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "crates/*",
    "commands/*"
]

[dependencies]
# Commands
turron-cmd-login = { path = "./commands/turron-cmd-login" }
turron-cmd-pack = { path = "./commands/turron-cmd-pack" }
turron-cmd-ping = { path = "./commands/turron-cmd-ping" }
turron-cmd-publish = { path = "./commands/turron-cmd-publish" }
turron-cmd-relist = { path = "./commands/turron-cmd-relist" }
turron-cmd-search = { path = "./commands/turron-cmd-search" }
turron-cmd-unlist = { path = "./commands/turron-cmd-unlist" }
turron-cmd-view = { path = "./commands/turron-cmd-view" }

# Workspace Deps
turron-command = { path = "./crates/turron-command" }
turron-common = { path = "./crates/turron-common" }

# Regular deps
directories = "3.0.1"
tracing-subscriber = "0.2.20"

[build-dependencies]
embed-resource = "1.3.3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'
