[package]
name = "ruget-cmd-ping"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
nuget-api = { path = "../../crates/nuget-api" }
ruget-command = { path = "../../crates/ruget-command" }
ruget-config = { path = "../../crates/ruget-config" }
ruget-diagnostics  = { path = "../../crates/ruget-diagnostics" }

clap = { git = "https://github.com/zkat/clap" }
url = "2.1.0"
async-trait = "0.1.19"
log = "0.4.11"
serde_json = "1.0.66"
