[package]
name = "ruget-cmd-view"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
miette-utils = { path = "../../crates/miette-utils" }
nuget-api = { path = "../../crates/nuget-api" }
ruget-command = { path = "../../crates/ruget-command" }
ruget-config = { path = "../../crates/ruget-config" }

clap = { git = "https://github.com/zkat/clap" }
async-trait = "0.1.19"
log = "0.4.11"
serde_json = "1.0.66"
miette = "0.2.1"
