[package]
name = "ruget-cmd-view"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
nuget-api = { path = "../../crates/nuget-api" }
ruget-command = { path = "../../crates/ruget-command" }
ruget-common = { path = "../../crates/ruget-common" }
ruget-package-spec = { path = "../../crates/ruget-package-spec" }
ruget-semver = { path = "../../crates/ruget-semver" }

term_grid = "0.2.0"
term_size = "0.3.2"
