[package]
name = "turron-cmd-view"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
nuget-api = { path = "../../crates/nuget-api" }
turron-command = { path = "../../crates/turron-command" }
turron-common = { path = "../../crates/turron-common" }
turron-package-spec = { path = "../../crates/turron-package-spec" }
dotnet-semver = { path = "../../crates/dotnet-semver" }
turron-pick-version = { path = "../../crates/turron-pick-version" }

nu-table = "0.36.0"
nu-ansi-term = "0.36.0"
term_grid = "0.2.0"
term_size = "0.3.2"
termimad = "0.14.2"
viuer = "0.5.1"
image = "0.23.14"
