[package]
name = "miette-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: Manually keep in sync with ruget-common.
miette = "0.4.0"
# miette = { path = "../../../miette" }
thiserror = "1.0.26"
