[package]
name = "nuget-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = { version = "1.0.4", features = ["serde"] }
serde = "1.0.126"
surf = "2.2.0"
thiserror = "1.0.26"
async-std = "1.9.0"
serde_json = "1.0.66"
# miette = "0.2.0"
miette = { path = "../../../miette" }
