[package]
name = "ruget-command"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
ruget-common = { path = "../ruget-common" }

# Re-exports, a la "ruget-common", but stuff that commands use a lot.
async-trait = "0.1.19"
clap = { git = "https://github.com/zkat/clap" }
log = "0.4.11"
ruget-config = { path = "../../crates/ruget-config" }
serde_json = "1.0.66"
owo-colors = "2.0.0"
