[package]
name = "ruget-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "0.3.0"
miette-utils = { path = "../miette-utils" }
thiserror = "1.0.26"
chrono = { version = "0.4.19", features = ["serde"] }
semver = { version = "1.0.4", features = ["serde"] }
surf = "2.2.0"
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
serde_json = "1.0.66"

# Any crate that uses this must also have this version of serde as a direct
# dependency. Serde's macros specifically require serde to be "true" toplevel
# crate.
serde = "1.0.126"
