[package]
name = "ruget-config"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
ruget-config-derive = { path = "../ruget-config-derive" }
thisdiagnostic = { path = "../thisdiagnostic" }

clap = { git = "https://github.com/zkat/clap" }
config = { version = "0.9.3", features = ["toml"] }
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "1.0.22"

[dev-dependencies]
anyhow = "1.0.24"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
