[package]
name = "ruget-semver"
version = "0.1.0"
authors = ["Felipe Sere <felipesere@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
ruget-common = { path = "../ruget-common" }
serde = "1.0.126"

bytecount = "0.6.0"
nom = "6.2.1"

[dev-dependencies]
serde_json = "1.0.57"
serde_derive = "1.0.115"
pretty_assertions = "0.6.1"
