[package]
name = "turron-config"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
turron-common = { path = "../turron-common" }
turron-config-derive = { path = "../turron-config-derive" }

# False deps
clap = { git = "https://github.com/zkat/clap" }
serde = { version = "1.0.103", features = ["derive"] }

# True deps
config = { version = "0.9.3", features = ["toml"] }
kdl = "3.0.0"

[dev-dependencies]
anyhow = "1.0.24"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
